--- a/package.json
+++ b/package.json
@@ -1,17 +1,19 @@
 {
-  "name": "app-genezio",
+  "name": "Hello-World",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.mjs",
-  "types": "module",
+  "description": "Hello-World",
+  "main": "app.js",
+  "repository": "",
+  "author": "my",
+  "license": "MIT",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+  "start": "node app.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "type": "module",
   "dependencies": {
-    "express": "^4.19.2"
+    "ws": "^8.13.0",
+    "express": "^4.18.2"
+  },
+  "engines": {
+    "node": ">=14"
   }
 }
